base/deployment.yaml
# base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app

          image: 120653558546.dkr.ecr.ap-south-1.amazonaws.com/my-app:v-1709771
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: my-reg
